grammar.js
    program: ($) =>
      choice(
        repeat($.line_continuation),
        seq(
          repeat($.line_continuation),
          choice(
            $.item_list,
            field("item", $.item),
            withLineContinuations($, $.item_list, field("item", $.item)),
          ),
          repeat($.line_continuation),
        ),
      ),

    _continued_close_bracket: ($) =>
      continuedMember($, $._lc_before_close_bracket, "]"),

    item_list: ($) =>
      choice(
        field("leading", $.newline_opt),
        $._terminated_items,
        withLineContinuations(
          $,
          field("leading", $.newline_opt),
          $._terminated_items,
        ),
      ),

    _terminated_items: ($) =>
      choice(
        $._terminated_item,
        seq(
          $._terminated_items,
          repeat($.line_continuation),
          $._terminated_item,
        ),
      ),

    item: ($) => choice($._normal_pattern_item, $._closed_item),

    _closed_item: ($) =>
      choice($._action_item, $._pattern_action_item, $._function_item),

    _normal_pattern_item: ($) => field("pattern", $.normal_pattern),

    pattern: ($) => choice($.normal_pattern, $.special_pattern),

    special_pattern: ($) => choice($.begin_keyword, $.end_keyword),

    begin_keyword: ($) => prec(10, $._begin_word),

    _action_opening_layout: ($) =>
      seq(field("opening", "{"), optionalNewlineLayout($)),

    _action_body: ($) =>
      actionBody(
        $,
        choice($.terminated_statement_list, $.unterminated_statement_list),
      ),

    action: ($) =>
      choice(
        seq($._action_opening_layout, field("closing", "}")),
        seq($._action_opening_layout, $._action_body, field("closing", "}")),
        seq(
          $._action_opening_layout,
          actionBoundaryBody($),
          field("closing", "}"),
        ),
      ),

    unterminated_statement_list: ($) =>
      statementListWithTail($, $.unterminated_statement),

    _do_header: ($) => keywordHeader($, $.do_keyword),

    unterminated_statement: ($) =>
      choice(
        field("statement", $.terminatable_statement),
        ...controlStatements($, $.unterminated_statement),
      ),

    terminatable_statement: ($) =>
      choice(
        $.simple_statement,
        $.break_keyword,
        $.continue_keyword,
        $.next_keyword,
        $.nextfile_keyword,
        seq(
          $.exit_keyword,
          optional(continuedMember($, $._lc_before_expression, $.expr)),
        ),
        seq(
          $.return_keyword,
          optional(continuedMember($, $._lc_before_expression, $.expr)),
        ),
        seq(
          $._do_header,
          field("body", $.terminated_statement),
          continuedDoTail($),
        ),
      ),

    simple_statement: ($) =>
      choice(
        seq(
          $.delete_keyword,
          continuedMember($, $._lc_before_expression, field("array", $.name)),
          optional(
            seq(
              continuedMember($, $._lc_before_open_bracket, "["),
              repeat($.line_continuation),
              field("subscripts", $.expr_list),
              $._continued_close_bracket,
            ),
          ),
        ),
        $.expr,
        $.print_statement,
      ),

    print_statement: ($) =>
      prec.right(
        choice(
          field("statement", $.simple_print_statement),
          seq(
            field("statement", $.simple_print_statement),
            continuedMember(
              $,
              $._lc_before_output_redirection,
              field("redirection", $.output_redirection),
            ),
          ),
        ),
      ),

    simple_print_statement: ($) =>
      choice(
        prec.right(
          seq(
            $.print_keyword,
            optional(
              continuedMember(
                $,
                $._lc_before_expression,
                field("arguments", $.print_expr_list),
              ),
            ),
          ),
        ),
        parenthesizedPrintStatement($, $.print_keyword),
        prec.right(
          seq(
            $.printf_keyword,
            continuedMember(
              $,
              $._lc_before_expression,
              field("arguments", $.print_expr_list),
            ),
          ),
        ),
        parenthesizedPrintStatement($, $.printf_keyword),
      ),

    print_keyword: ($) => prec(10, $._print_word),

    print_expr_list: ($) =>
      prec.left(
        seq($.print_expr, repeat(continuedPrintListElement($, $.print_expr))),
      ),

    print_expr: ($) => choice($.unary_print_expr, $.non_unary_print_expr),

    non_unary_print_expr: ($) => $._print_non_unary_assignment_expr,

    escape_sequence: ($) =>
      seq(
        $._escape_introducer,
        choice($._escape_character, $._escape_octal_digits),
      ),

    ere: ($) =>
      seq(
        field("opening", alias($._ere_opening_slash, "/")),
        choice(
          seq(
            field("expression", $.extended_reg_exp),
            field("closing", alias($._ere_closing, "/")),
          ),
          seq(
            optional(field("expression", $.extended_reg_exp)),
            $._ere_lexical_end,
          ),
        ),
      ),

    extended_reg_exp: ($) =>
      choice(
        $.ere_branch,
        prec.left(
          1,
          seq(
            field("left", $.extended_reg_exp),
            field("operator", token.immediate("|")),
            field("right", $.ere_branch),
          ),
        ),
      ),

    ere_branch: ($) =>
      choice(
        $.ere_expression,
        prec.left(
          seq(field("left", $.ere_branch), field("right", $.ere_expression)),
        ),
      ),

    ere_expression: ($) =>
      choice(
        $.one_char_or_coll_elem_ere,
        $.left_anchor,
        $.right_anchor,
        seq(
          field("opening", token.immediate("(")),
          field("expression", $.extended_reg_exp),
          field("closing", $._ere_close_parenthesis),
        ),
        prec.left(
          2,
          seq(
            field("operand", $.ere_expression),
            field("operator", $.ere_dupl_symbol),
          ),
        ),
      ),

    one_char_or_coll_elem_ere: ($) =>
      choice(
        $.ordinary_character,
        $.quoted_character,
        $.wildcard,
        $.bracket_expression,
        alias($._ere_octal_escape_sequence, $.escape_sequence),
        alias($._ere_undefined_escape_sequence, $.escape_sequence),
      ),

    ordinary_character: ($) =>
      choice(
        $._ordinary_character,
        $._ere_ordinary_close_parenthesis,
        $._ere_ordinary_close_brace,
        $.escaped_delimiter,
        alias($._ere_named_escape_sequence, $.escape_sequence),
      ),

    quoted_character: ($) =>
      alias($._ere_quoted_escape_sequence, $.escape_sequence),

    wildcard: () => token.immediate("."),

    left_anchor: () => token.immediate("^"),

    right_anchor: () => token.immediate("$"),

    ere_dupl_symbol: ($) =>
      prec.right(
        3,
        seq(
          choice(
            token.immediate("*"),
            token.immediate("+"),
            token.immediate("?"),
            $._ere_interval,
          ),
          optional(field("modifier", $.repetition_modifier)),
        ),
      ),

    repetition_modifier: () => token.immediate("?"),

    _ere_interval: ($) =>
      seq(
        token.immediate("{"),
        ereRequiredPayload(
          $,
          seq(
            $.dup_count,
            optional(seq(token.immediate(","), optional($.dup_count))),
          ),
          $._ere_close_brace,
        ),
      ),

    dup_count: ($) => $._number_digit_chunk,

    bracket_expression: ($) =>
      prec(
        2,
        seq(
          token.immediate("["),
          choice($.matching_list, $.nonmatching_list),
          $._ere_close_bracket,
        ),
      ),

    matching_list: ($) => $.bracket_list,

    nonmatching_list: ($) => seq(token.immediate(prec(3, "^")), $.bracket_list),

    bracket_list: ($) =>
      choice(
        ...ereBracketListAlternatives($, $.follow_list),
        ...ereBracketListAlternatives(
          $,
          alias($._initial_close_follow_list, $.follow_list),
        ),
      ),

    _initial_close_follow_list: ($) =>
      choice(
        alias($._initial_close_expression_term, $.expression_term),
        prec.left(
          seq(
            alias($._initial_close_follow_list, $.follow_list),
            $.expression_term,
          ),
        ),
      ),

    follow_list: ($) =>
      choice(
        $.expression_term,
        prec.left(seq($.follow_list, $.expression_term)),
      ),

    expression_term: ($) => choice($.single_expression, $.range_expression),

    single_expression: ($) =>
      choice($.end_range, $.character_class, $.equivalence_class),

    range_expression: ($) => ereRangeExpressionWith($, $.start_range),

    start_range: ($) => seq($.end_range, $._ere_bracket_hyphen),

    end_range: ($) => choice($.collating_element, $.collating_symbol),

    collating_element: ($) =>
      choice(
        $._ere_bracket_character,
        $._ere_bracket_open_character,
        $._ere_bracket_hyphen,
        $.escaped_delimiter,
        alias($._ere_bracket_escape_sequence, $.escape_sequence),
      ),

    collating_symbol: ($) =>
      ereCompound(
        $,
        $._ere_open_dot,
        choice(
          alias($._ere_compound_collating_element, $.collating_element),
          $.meta_character,
        ),
        $._ere_dot_close,
      ),

    equivalence_class: ($) =>
      ereCompound(
        $,
        $._ere_open_equal,
        choice(
          alias($._ere_compound_collating_element, $.collating_element),
          alias($._ere_compound_meta_character, $.collating_element),
        ),
        $._ere_equal_close,
      ),

    character_class: ($) =>
      ereCompound($, $._ere_open_colon, $.class_name, $._ere_colon_close),

    class_name: ($) => $._ere_class_name_spelling,

    meta_character: ($) => $._ere_compound_meta_character,

    _ere_compound_collating_element: ($) =>
      choice(
        $._ere_compound_nonmeta_atom,
        seq(
          $._ere_compound_atom,
          $._ere_compound_atom,
          repeat($._ere_compound_atom),
        ),
      ),

    _ere_open_dot: ($) => ereCompoundOpening($, "."),

    _ere_dot_close: ($) => ereCompoundClosing($._ere_dot_close_guard, "."),

    _ere_open_equal: ($) => ereCompoundOpening($, "="),

    _ere_equal_close: ($) => ereCompoundClosing($._ere_equal_close_guard, "="),

    _ere_open_colon: ($) => ereCompoundOpening($, ":"),

    _ere_colon_close: ($) => ereCompoundClosing($._ere_colon_close_guard, ":"),

    escaped_delimiter: ($) =>
      seq(
        $._ere_escaped_delimiter_start,
        $._escape_introducer,
        alias($._ere_escaped_delimiter_end, "/"),
      ),

    _ere_named_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._ere_named_escape_character),

    _ere_quoted_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._ere_quoted_escape_character),

    _ere_octal_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._escape_octal_digits),

    _ere_undefined_escape_sequence: ($) =>
      ereEscapeWithCharacter($, $._ere_undefined_escape_character),

    _ere_bracket_escape_sequence: ($) =>
      choice(
        $._ere_named_escape_sequence,
        $._ere_quoted_escape_sequence,
        $._ere_octal_escape_sequence,
        $._ere_undefined_escape_sequence,
      ),

    // Tree-sitter rejects the POSIX bracket spelling for these delimiter
    // characters, so the exclusion sets use its hexadecimal regex escape.
    _ordinary_character: () =>
      token.immediate(prec(1, /[^.\x5B\x5C*^$+?{|}()/\n]/)),

    _ere_ordinary_close_parenthesis: () => token.immediate(prec(1, ")")),

    _ere_ordinary_close_brace: () => token.immediate(prec(1, "}")),

    _ere_close_parenthesis: () => token.immediate(prec(2, ")")),

    _ere_close_bracket: () => token.immediate(prec(3, "]")),

    _ere_bracket_hyphen: () => token.immediate("-"),

    _ere_bracket_character: () =>
      token.immediate(prec(1, /[^\x2D\x2F\x5B\x5C\x5D\n]/)),

    _ere_bracket_open_character: () => token.immediate(prec(1, "[")),

    _ere_compound_meta_character: () => token.immediate(/[\x2D\x5D\x5E]/),

    _ere_class_name_spelling: () => token.immediate(/[A-Za-z][A-Za-z0-9]*/),

    newline_opt: ($) => rawNewlines($),

    terminator: ($) =>
      choice(
        rawNewlines($),
        seq(";", repeat(seq(repeat($.line_continuation), $.newline))),
      ),

    newline: () => "\n",

    _number_digit_chunk: () => token.immediate(/[0-9]+/),

    _escape_introducer: () => token.immediate(/\\/),

    _escape_character: () =>
      choice(token.immediate(/\\/), token.immediate(prec(1, /[^0-7\\\n]/))),

    _escape_octal_digits: () => token.immediate(/[0-7]{1,3}/),
  },
});
