test/corpus/ere.txt
==================
ordinary characters include blank, hash, non-ASCII, and hyphen
==================

BEGIN { print /1 #犬-/ }

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_branch
                                  (ere_branch
                                    (ere_branch
                                      (ere_branch
                                        (ere_expression
                                          (one_char_or_coll_elem_ere
                                            (ordinary_character))))
                                      (ere_expression
                                        (one_char_or_coll_elem_ere
                                          (ordinary_character))))
                                    (ere_expression
                                      (one_char_or_coll_elem_ere
                                        (ordinary_character))))
                                  (ere_expression
                                    (one_char_or_coll_elem_ere
                                      (ordinary_character))))
                                (ere_expression
                                  (one_char_or_coll_elem_ere
                                    (ordinary_character)))))))))))))))))
    (terminator
      (newline))))

==================
AWK escapes preserve source-neutral ERE classifications
==================

BEGIN { print /\/\\\.\[\(\*\+\?\{\|\^\$\a\b\f\n\r\t\v\1\12\1234\0000\400\052\057\134.\q\x\"/ }

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_branch
                                  (ere_branch
                                    (ere_branch
                                      (ere_branch
                                        (ere_branch
                                          (ere_branch
                                            (ere_branch
                                              (ere_branch
                                                (ere_branch
                                                  (ere_branch
                                                    (ere_branch
                                                      (ere_branch
                                                        (ere_branch
                                                          (ere_branch
                                                            (ere_branch
                                                              (ere_branch
                                                                (ere_branch
                                                                  (ere_branch
                                                                    (ere_branch
                                                                      (ere_branch
                                                                        (ere_branch
                                                                          (ere_branch
                                                                            (ere_branch
                                                                              (ere_branch
                                                                                (ere_branch
                                                                                  (ere_branch
                                                                                    (ere_branch
                                                                                      (ere_branch
                                                                                        (ere_branch
                                                                                          (ere_branch
                                                                                            (ere_branch
                                                                                              (ere_branch
                                                                                                (ere_expression
                                                                                                  (one_char_or_coll_elem_ere
                                                                                                    (ordinary_character
                                                                                                      (escaped_delimiter)))))
                                                                                              (ere_expression
                                                                                                (one_char_or_coll_elem_ere
                                                                                                  (quoted_character
                                                                                                    (escape_sequence)))))
                                                                                            (ere_expression
                                                                                              (one_char_or_coll_elem_ere
                                                                                                (quoted_character
                                                                                                  (escape_sequence)))))
                                                                                          (ere_expression
                                                                                            (one_char_or_coll_elem_ere
                                                                                              (quoted_character
                                                                                                (escape_sequence)))))
                                                                                        (ere_expression
                                                                                          (one_char_or_coll_elem_ere
                                                                                            (quoted_character
                                                                                              (escape_sequence)))))
                                                                                      (ere_expression
                                                                                        (one_char_or_coll_elem_ere
                                                                                          (quoted_character
                                                                                            (escape_sequence)))))
                                                                                    (ere_expression
                                                                                      (one_char_or_coll_elem_ere
                                                                                        (quoted_character
                                                                                          (escape_sequence)))))
                                                                                  (ere_expression
                                                                                    (one_char_or_coll_elem_ere
                                                                                      (quoted_character
                                                                                        (escape_sequence)))))
                                                                                (ere_expression
                                                                                  (one_char_or_coll_elem_ere
                                                                                    (quoted_character
                                                                                      (escape_sequence)))))
                                                                              (ere_expression
                                                                                (one_char_or_coll_elem_ere
                                                                                  (quoted_character
                                                                                    (escape_sequence)))))
                                                                            (ere_expression
                                                                              (one_char_or_coll_elem_ere
                                                                                (quoted_character
                                                                                  (escape_sequence)))))
                                                                          (ere_expression
                                                                            (one_char_or_coll_elem_ere
                                                                              (quoted_character
                                                                                (escape_sequence)))))
                                                                        (ere_expression
                                                                          (one_char_or_coll_elem_ere
                                                                            (ordinary_character
                                                                              (escape_sequence)))))
                                                                      (ere_expression
                                                                        (one_char_or_coll_elem_ere
                                                                          (ordinary_character
                                                                            (escape_sequence)))))
                                                                    (ere_expression
                                                                      (one_char_or_coll_elem_ere
                                                                        (ordinary_character
                                                                          (escape_sequence)))))
                                                                  (ere_expression
                                                                    (one_char_or_coll_elem_ere
                                                                      (ordinary_character
                                                                        (escape_sequence)))))
                                                                (ere_expression
                                                                  (one_char_or_coll_elem_ere
                                                                    (ordinary_character
                                                                      (escape_sequence)))))
                                                              (ere_expression
                                                                (one_char_or_coll_elem_ere
                                                                  (ordinary_character
                                                                    (escape_sequence)))))
                                                            (ere_expression
                                                              (one_char_or_coll_elem_ere
                                                                (ordinary_character
                                                                  (escape_sequence)))))
                                                          (ere_expression
                                                            (one_char_or_coll_elem_ere
                                                              (escape_sequence))))
                                                        (ere_expression
                                                          (one_char_or_coll_elem_ere
                                                            (escape_sequence))))
                                                      (ere_expression
                                                        (one_char_or_coll_elem_ere
                                                          (escape_sequence))))
                                                    (ere_expression
                                                      (one_char_or_coll_elem_ere
                                                        (ordinary_character))))
                                                  (ere_expression
                                                    (one_char_or_coll_elem_ere
                                                      (escape_sequence))))
                                                (ere_expression
                                                  (one_char_or_coll_elem_ere
                                                    (ordinary_character))))
                                              (ere_expression
                                                (one_char_or_coll_elem_ere
                                                  (escape_sequence))))
                                            (ere_expression
                                              (one_char_or_coll_elem_ere
                                                (escape_sequence))))
                                          (ere_expression
                                            (one_char_or_coll_elem_ere
                                              (escape_sequence))))
                                        (ere_expression
                                          (one_char_or_coll_elem_ere
                                            (escape_sequence))))
                                      (ere_expression
                                        (one_char_or_coll_elem_ere
                                          (wildcard))))
                                    (ere_expression
                                      (one_char_or_coll_elem_ere
                                        (escape_sequence))))
                                  (ere_expression
                                    (one_char_or_coll_elem_ere
                                      (escape_sequence))))
                                (ere_expression
                                  (one_char_or_coll_elem_ere
                                    (escape_sequence)))))))))))))))))
    (terminator
      (newline))))

==================
bracket list positions distinguish closers, literals, and ranges
==================

BEGIN { print /[+-]?[a]/ }
BEGIN { print /[]-a][]--]/ }

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_branch
                                  (ere_expression
                                    (ere_expression
                                      (one_char_or_coll_elem_ere
                                        (bracket_expression
                                          (matching_list
                                            (bracket_list
                                              (follow_list
                                                (expression_term
                                                  (single_expression
                                                    (end_range
                                                      (collating_element))))))))))
                                    (ere_dupl_symbol)))
                                (ere_expression
                                  (one_char_or_coll_elem_ere
                                    (bracket_expression
                                      (matching_list
                                        (bracket_list
                                          (follow_list
                                            (expression_term
                                              (single_expression
                                                (end_range
                                                  (collating_element))))))))))))))))))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_branch
                                  (ere_expression
                                    (one_char_or_coll_elem_ere
                                      (bracket_expression
                                        (matching_list
                                          (bracket_list
                                            (follow_list
                                              (expression_term
                                                (range_expression
                                                  (start_range
                                                    (end_range
                                                      (collating_element)))
                                                  (end_range
                                                    (collating_element)))))))))))
                                (ere_expression
                                  (one_char_or_coll_elem_ere
                                    (bracket_expression
                                      (matching_list
                                        (bracket_list
                                          (follow_list
                                            (expression_term
                                              (range_expression
                                                (start_range
                                                  (end_range
                                                    (collating_element)))))))))))))))))))))))))
    (terminator
      (newline))))

==================
matching and nonmatching lists preserve first bracket and last hyphen
==================

BEGIN { print /[]a-][^]b-]/ }

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_branch
                                  (ere_expression
                                    (one_char_or_coll_elem_ere
                                      (bracket_expression
                                        (matching_list
                                          (bracket_list
                                            (follow_list
                                              (follow_list
                                                (expression_term
                                                  (single_expression
                                                    (end_range
                                                      (collating_element)))))
                                              (expression_term
                                                (single_expression
                                                  (end_range
                                                    (collating_element)))))))))))
                                (ere_expression
                                  (one_char_or_coll_elem_ere
                                    (bracket_expression
                                      (nonmatching_list
                                        (bracket_list
                                          (follow_list
                                            (follow_list
                                              (expression_term
                                                (single_expression
                                                  (end_range
                                                    (collating_element)))))
                                            (expression_term
                                              (single_expression
                                                (end_range
                                                  (collating_element))))))))))))))))))))))))
    (terminator
      (newline))))

==================
ranges, collating forms, classes, and escapes preserve bracket hierarchy
==================

BEGIN { print /[a-c][[][[.ch.]][[.a.b.]][[.-.]][[=a=]][[=a=b=]][[:alpha:]][\q\/]/ }

---

(program
  (item_list
    (newline_opt
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_branch
                                  (ere_branch
                                    (ere_branch
                                      (ere_branch
                                        (ere_branch
                                          (ere_branch
                                            (ere_branch
                                              (ere_branch
                                                (ere_expression
                                                  (one_char_or_coll_elem_ere
                                                    (bracket_expression
                                                      (matching_list
                                                        (bracket_list
                                                          (follow_list
                                                            (expression_term
                                                              (range_expression
                                                                (start_range
                                                                  (end_range
                                                                    (collating_element)))
                                                                (end_range
                                                                  (collating_element)))))))))))
                                              (ere_expression
                                                (one_char_or_coll_elem_ere
                                                  (bracket_expression
                                                    (matching_list
                                                      (bracket_list
                                                        (follow_list
                                                          (expression_term
                                                            (single_expression
                                                              (end_range
                                                                (collating_element)))))))))))
                                            (ere_expression
                                              (one_char_or_coll_elem_ere
                                                (bracket_expression
                                                  (matching_list
                                                    (bracket_list
                                                      (follow_list
                                                        (expression_term
                                                          (single_expression
                                                            (end_range
                                                              (collating_symbol
                                                                (collating_element))))))))))))
                                          (ere_expression
                                            (one_char_or_coll_elem_ere
                                              (bracket_expression
                                                (matching_list
                                                  (bracket_list
                                                    (follow_list
                                                      (expression_term
                                                        (single_expression
                                                          (end_range
                                                            (collating_symbol
                                                              (collating_element))))))))))))
                                        (ere_expression
                                          (one_char_or_coll_elem_ere
                                            (bracket_expression
                                              (matching_list
                                                (bracket_list
                                                  (follow_list
                                                    (expression_term
                                                      (single_expression
                                                        (end_range
                                                          (collating_symbol
                                                            (meta_character))))))))))))
                                      (ere_expression
                                        (one_char_or_coll_elem_ere
                                          (bracket_expression
                                            (matching_list
                                              (bracket_list
                                                (follow_list
                                                  (expression_term
                                                    (single_expression
                                                      (equivalence_class
                                                        (collating_element)))))))))))
                                    (ere_expression
                                      (one_char_or_coll_elem_ere
                                        (bracket_expression
                                          (matching_list
                                            (bracket_list
                                              (follow_list
                                                (expression_term
                                                  (single_expression
                                                    (equivalence_class
                                                      (collating_element)))))))))))
                                  (ere_expression
                                    (one_char_or_coll_elem_ere
                                      (bracket_expression
                                        (matching_list
                                          (bracket_list
                                            (follow_list
                                              (expression_term
                                                (single_expression
                                                  (character_class
                                                    (class_name)))))))))))
                                (ere_expression
                                  (one_char_or_coll_elem_ere
                                    (bracket_expression
                                      (matching_list
                                        (bracket_list
                                          (follow_list
                                            (follow_list
                                              (expression_term
                                                (single_expression
                                                  (end_range
                                                    (collating_element
                                                      (escape_sequence))))))
                                            (expression_term
                                              (single_expression
                                                (end_range
                                                  (collating_element
                                                    (escaped_delimiter)))))))))))))))))))))))))
    (terminator
      (newline))))

==================
alternation, grouping, anchors, and repetitions follow ERE hierarchy
==================

BEGIN { print /^a.(b|c)*?d+?e??f{2}?g{3,}?h{4,5}?$/ }

---
